Edit Javadoc and code style based on feedback.